# Style-AI-Public

./: .gitignore  README.md
Style.AI/: .env.example  .gitignore  README.md  Style_BFL.py  main.py  pyproject.toml
Style.AI-UI/: README.md  package-lock.json  package.json
Style.AI-UI/public/: index.html  manifest.json
Style.AI-UI/src/: App.css  App.jsx  index.js
Style.AI-UI/src/components/: ProgressSteps.jsx  ResultCard.jsx  ResultCard2.css  ResultCard2.jsx  StylePopup.jsx  UploadSection.jsx
Style.AI-UI/src/data/: dressTryOn.json  styleCatalog.json
Style.AI-UI/src/services/: styleApi.js
Style.AI-UI/src/utils/: imageUtils.js
Style.AI/app/: config.py  logging.py  main.py
Style.AI/app/api/routes/: style_bfl.py
Style.AI/app/core/: prompts.py
Style.AI/app/schemas/: style.py
Style.AI/app/services/: bfl_service.py  face_service.py  image_service.py
