[project]
name = "style-ai"
version = "0.1.0"
description = "FastAPI backend for AI-assisted hairstyle and dress style transformations using BFL and InsightFace."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "insightface>=1.0.1",
    "numpy>=2.4.6",
    "onnxruntime>=1.27.0",
    "opencv-python>=5.0.0.93",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "uvicorn>=0.50.0",
]
